--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,9 @@
 
+0.02 (2017-01-04)
+----------------
+- Send notifications in realtime
+- Reacts to any of PROCESS_STATE_*
+
 0.02 (2015-10-30)
 ----------------
 - Copyright and Package fixes.
